--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "exercise-sample",
+  "name": "javascript exercise template",
   "version": "1.0.0",
-  "description": "Coderpower exercise template",
+  "description": "How to create an exercise in javascript on coderpower.com",
   "directories": {
     "test": "./test"
   },
@@ -10,10 +10,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Coderpower/exercise-template.git"
+    "url": "git+https://github.com/Coderpower/javascript-exercise-template.git"
   },
   "author": "Coderpower Sample",
-  "homepage": "https://github.com/Coderpower/exercise-template.git#readme",
+  "homepage": "https://github.com/Coderpower/javascript-exercise-template.git#readme",
   "dependencies": {
     "expect.js": "^0.3.1"
   }
