--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "javascript exercise template",
+  "name": "javascript-exercise-template",
   "version": "1.0.0",
   "description": "How to create an exercise in javascript on coderpower.com",
   "directories": {
