Fix invalid name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "No promise, no chocolate !",
+  "name": "no-promise-no-chocolate",
   "version": "1.0.0",
   "description": "How to deal without any promises ? Callback powa !",
   "directories": {
